--- a/css/home.css
+++ b/css/home.css
@@ -53,16 +53,16 @@ video {
 }
 .nav{
 	text-align: center;
-	margin-top: 10px;
+	margin-top: 18px;
 	font-family:"Courier New", Courier, monospace;
-    font-size: 21px;
-    color: white;
-    text-transform: uppercase;
-    background: transparent;
+  font-size: 21px;
+  color: white;
+  text-transform: uppercase;
+  background: transparent;
     }
 .nav:hover{
     color: rgb(140, 235, 140);
-	padding: 2px;
+	padding: 1px;
 	background-color: greenyellow;
 }
 .nav a {
@@ -112,15 +112,18 @@ button:hover {
     height: 500px;
 }
 #foot {
-    height: 40px;
+    height: 50px;
     background-color: black;
 }
 #lap {
     text-align: center;
 }
 #rights{
-    padding-top: 8px;
+    padding-top: 15px;
     color: white;
+}
+#icon {
+    padding-top: 4px;
 }
 #web {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
@@ -131,7 +134,7 @@ button:hover {
 #java {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     font-size: 30px;
-    margin-left: 100px;
+    margin-left: 200px;
     color: rgb(221, 83, 83);
 }
 #sql {
@@ -147,7 +150,7 @@ button:hover {
 h3.hny-title {
   font-size: 36px;
   line-height: 46px;
-  color: #233142;
+  color: black;
   margin-bottom: 24px;
   text-transform: capitalize;
   font-weight: 700;
@@ -187,7 +190,7 @@ h3.hny-title {
   }
   
   .w3l-content-6 .progress-bar {
-    background-color: #4f9da6;
+    background-color: gray;
     transition: width 0.6s ease;
   }
   
@@ -198,4 +201,13 @@ h3.hny-title {
   #me {
       font-size: 20px;
       color: black;
+  }
+  button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 110px;
   }
